--- a/polls/templates/polls/cust_index.html
+++ b/polls/templates/polls/cust_index.html
@@ -48,10 +48,10 @@
                   <td>{{ reserv.reservation_time }}</td>
                   <td>{{ reserv.flight_leg.time }}</td>
                   <td>{{ reserv.flight_leg.departs.airport_code }}</td>
-                  <td>{{ reserv.flight_leg.estimated_arr_time}}</td>
-                  <td>Atatürk</td>
-                  <td>2 hr 3 min</td>
-                  <td>500 km</td>
+                  <td>{{ reserv.flight_leg.estimated_arr_time }}</td>
+                  <td>{{ reserv.flight_leg.arrives.airport_code }}</td>
+                  <td> </td>
+                  <td>{{ reserv.flight_leg.travel_distance }}</td>
                   <td>
                     <a><i class="fa fa-pencil"></i></a>
                   </td>
