--- a/polls/templates/polls/crew_log.html
+++ b/polls/templates/polls/crew_log.html
@@ -1,30 +1,3 @@
-<!-- // templates/auth.html
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<title>Log in</title>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<style>
-body{
-	font-family:Arial,Helvetica,sans-serif;
-	font-size: 12px;
-}
-</style>
-</head>
-<body>
-	{{ state }}
-	<form action="" method="post">
-		{% csrf_token %}
-		username: 
-		<input type="text" name="username" value="{{ username}}" /><br />
-		password:
-		<input type="password" name="password" value="" /><br />
-
-		<input type="submit" value="Sign In" />
-	</form>
-</body>
-</html> -->
-
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +10,7 @@ body{
       <div class="container">
         <div class="row">
           <h1>
-            Airline Data Management System - Customer Login
+            Airline Data Management System - Crew Login 
           </h1>
         </div>
         
@@ -54,7 +27,6 @@ body{
                 <input class="form-control" id="exampleInputPassword1" name="password" type="password">
               </div>
               <button type="submit" class="btn btn-primary">Sign In</button>
-              <a href="/polls/create_account" class="btn btn-info" role="button">Create Account</a>
               {% if login_error %}
 				        <div class="alert alert-danger" role="alert"> error </div>
               {% else %}
