customer could reserve

--- a/polls/templates/polls/cust_index.html
+++ b/polls/templates/polls/cust_index.html
@@ -19,117 +19,96 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
-  </head><body>
+    <style>
+      input[type="submit"] {
+          font-family: FontAwesome;
+      } 
+    </style>
+  </head>
+<body>
+  <div class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url 'cust_index' %}"><span>Airline Company</span></a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active">
+            <a href="{% url 'cust_index' %}">My Reservations</a>
+          </li>
+          <li>
+            <a href="{% url 'cust_log' %}ticket">My Tickets</a>
+          </li>
+          <li>
+            <a href="{%url 'cust_log' %}profile">Profile</a>
+          </li>
+          <li>
+            <a href="{%url 'cust_logout' %}">Sign Out</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
     <div class="section">
 
-    {% if my_reserv_list %}
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Reservation Code</th>
-                  <th>Reservation Time Time</th>
-                  <th>Departure Time</th>
-                  <th>Departure Airport</th>
-                  <th>Arrival Time</th>
-                  <th>Arrival Airport</th>
-                  <th>Travel Time</th>
-                  <th>Travel Distance</th>
-                  <th>Modify</th>
-                  <th>Delete</th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for reserv in my_reserv_list %}
-                <tr>
-                  <td>{{ reserv.reservation_code }}</td>
-                  <td>{{ reserv.reservation_time }}</td>
-                  <td>{{ reserv.flight_leg.time }}</td>
-                  <td>{{ reserv.flight_leg.departs.airport_code }}</td>
-                  <td>{{ reserv.flight_leg.estimated_arr_time }}</td>
-                  <td>{{ reserv.flight_leg.arrives.airport_code }}</td>
-                  <td> </td>
-                  <td>{{ reserv.flight_leg.travel_distance }}</td>
-                  <td>
-                    <a><i class="fa fa-pencil"></i></a>
-                  </td>
-                  <td>
-                    <a><i class="fa fa-trash"></i></a>
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
+      {% if my_reserv_list %}
+      <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Reservation Code</th>
+                    <th>Reservation Time Time</th>
+                    <th>Departure Time</th>
+                    <th>Departure Airport</th>
+                    <th>Arrival Time</th>
+                    <th>Arrival Airport</th>
+                    <th>Travel Distance</th>
+                    <th>Delete</th>
+                    <th>Buy</th>
+                  </tr>
+                </thead>
+                <tbody>
+                {% for reserv in my_reserv_list %}
+                  <tr>
+                    <td>{{ reserv.reservation_code }}</td>
+                    <td>{{ reserv.reservation_time }}</td>
+                    <td>{{ reserv.flight_leg.time }}</td>
+                    <td>{{ reserv.flight_leg.departs.airport_code }}</td>
+                    <td>{{ reserv.flight_leg.estimated_arr_time }}</td>
+                    <td>{{ reserv.flight_leg.arrives.airport_code }}</td>
+                    <td>{{ reserv.flight_leg.travel_distance }}</td>
+                    <form action="#" method="get">
+                      <input type="hidden" name="reserv_code" value="{{reserv.reservation_code}}">
+                      <td>
+                        <input type="submit" value="&#xf1f8;" name="delete">
+                      </i> 
+                      </td>
+                      <td>
+                        <input type="submit" value="&#xf058;" name="buy">
+                      </td>
+                    </form>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
       </div>
     </div>
     {% else %}
         <div class="alert alert-info" role="alert"> no reservation has made </div>
     {% endif %}
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <form class="form-inline" role="form">
-              <div class="form-group">
-                <div class="dropdown">
-                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Departure Airport
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Esenboğa</a>
-                    </li>
-                    <li>
-                      <a href="#">Atatürk</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group date" data-provide="datepicker">
-                  <input type="text" class="form-control" placeholder="Departure Time">
-                  <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="dropdown">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Arrival Airport
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Esenboğa</a>
-                    </li>
-                    <li>
-                      <a href="#">Atatürk</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group date" data-provide="datepicker">
-                  <input type="text" class="form-control" placeholder="Arrival Time">
-                  <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Add Reservation</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  
 
+    <div class="container">
+      <a href="{% url 'cust_log' %}new_reserv" class="btn btn-primary" role="button">Make Reservation</a>
+    </div>
 </body></html>
